2003-12-11  Richard Hult  <richard@imendio.com>

	* configure.in: Add gnome-vfs.
	* data/glade/html-output.glade:
	* data/ui/main-window.ui:
	* src/planner-html-plugin.c:
	* libplanner/mrp-error.h:
	* libplanner/mrp-xsl.c: Start to implement the "save to location
	feature". Based on patch from Bernardo Silveira.
	
	* src/planner-cmd-manager.[ch]:
	* src/planner-window.c:
	* src/planner-task-tree.c: Start implementing undo/redo.

	* src/: s/mg/planner/

2003-12-09  Richard Hult  <richard@imendio.com>

	* src/planner-application.c (application_init): Lower the limit on
	the number of recent files to keep the menu down a bit.

	* data/ui/main-window.ui: Use correct stock name for print
	preview.

	* Makefile.am: Update for new intltool.

	* src/planner-main-window.c: (get_last_dir), (main_window_open_cb),
	(main_window_do_save_as): Patch from Bernardo Silveira to remember
	the last used dir.

2003-12-08  Xavier Ordoquy <xordoquy@wanadoo.fr>

	* libplanner/Makefile.am: removed a tab.

2003-12-08  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* sql/Makefile.am:
	* configure.in: Add sql dir with the sql stuff.

2003-12-08  Richard Hult  <richard@imendio.com>

	* configure.in: Add gconf.

	* data/ui/main-window.ui: Fix a string.

	* libplanner/Makefile.am: Remove obsolete comment.
	
	* src/Makefile.am: Link postgres plugin with the pg libs.
	
	* src/planner-application.c:
	(planner_application_get_gconf_client):
	* src/planner-application.h: Add.

	* src/planner-sql-plugin.c: (sql_plugin_retrieve_db_values):
	Store/get values in gconf. Loosely based on patch from Bernardo
	Silveira.

2003-12-08  Richard Hult  <richard@imendio.com>

	* configure.in: Remove --with-html-dir, since gtk-doc.makefile
	handles that. Gets rid of duplicate --with-html-dir options.
	Add commented python checks, need to add this back.	

2003-12-04  Christian Neumair  <chris@gnome-de.org>

	* Makefile.am, po-libplanner/*:
	Kill po-libplanner. All translations now live in po.

	* configure.in: